# 0.00.05 (60092) Jan 10, 2012
1/10/12 move dropper-specific image dependencies into DropperNode
1/10/12 add background image for empty dropper
1/10/12 add Dropper.empty, handle proper interaction with Shaker.enabled
1/10/12 replace Shaker.enabled with Shaker.empty
# 0.00.04 (60076) Jan 10, 2012
1/10/12 dev version for discussion of whether to make dropper transparent or translucent
1/10/12 dropper with transparent glass
# 0.00.03 (60074) Jan 10, 2012
1/10/12 dev version for discussion of whether to make dropper transparent or translucent
1/10/12 new dropper image, created by Noah P.
# 0.00.02 (60062) Jan 9, 2012
1/9/12 early dev version for discussion of dropper issues
1/9/12 use an unlicensed placeholder for dropper that will have proper shape and prospective
1/9/12 experimented with 3D beaker, JC and KP decided to stick with 2D
1/5/12 simplistic version of stock solution inside dropper glass, doesn't conform to glass shape
1/5/12 move responsibility for visibility of shaker and dropper into the model
1/5/12 make concentration meter read all liquids: solution in beaker, solvent faucet, drain faucet, dropper (handle intersection in view)
1/5/12 compute color of stock solution based on stock concentration
1/5/12 add color range for solutes (min-max), max is saturated, min is >0, interpolate based on concentration
1/5/12 initialize with zero solute
1/5/12 change dropper's horizontal drag bounds to be full width of beaker (like shaker)
1/5/12 disable "Remove Solute" button when there is no solute in the beaker
1/5/12 change drag bounds for shaker, OK if top part of shaker goes off top edge of play area
# 0.00.01 (59868) Jan 4, 2012
1/4/12 early dev version for discussion of design issues with JC
1/3/12 add precipitate and particles to the model
1/3/12 add relative location of shaker holes to model
1/3/12 move shaker origin to center holes in shaker image
1/3/12 add node for debugging origin of shaker and dropper